--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --forceExit",
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "watch": "node --watch server.js"
+    "watch": "node --watch server.js",
+    "release": "standard-version",
+    "release:minor": "standard-version --release-as minor",
+    "release:major": "standard-version --release-as major",
+    "release:patch": "standard-version --release-as patch"
   },
   "keywords": [],
   "author": "Luis Gutierrez, Luis Subiabre, Oriana Gomez",
@@ -28,6 +32,7 @@
     "server": "^1.0.41"
   },
   "devDependencies": {
+    "standard-version": "^9.5.0",
     "supertest": "^7.0.0"
   }
 }
