--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Luis Gutierrez, Luis Subiabre, Oriana Gomez",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -26,6 +27,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "pg-format": "^1.0.4",
